<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="language">Bahasa</string>
    <string name="key_language">keyLanguage</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="key_edit_profile">keyEditProfile</string>
    <string name="key_change_password">keyChangePassword</string>
    <string name="privacy_police">Kebijakan Privasi</string>
    <string name="key_privacy_police">keyPrivacyPolice</string>
    <string name="key_faq">keyFaq</string>
    <string name="faq">FAQ</string>
    <string name="join_us">Gabung bersama kami</string>
    <string name="key_join_us">keyJoinUs</string>
    <string name="rate_us">Nilai Kami</string>
    <string name="key_rate_us">keyRateUs</string>
    <string name="logout_message">Apakah anda yakin untuk keluar?</string>
    <string name="edit_profile_message">Apakah anda yakin untuk mengubah profil?</string>
    <string name="change_pass_message">Apakah annda yakin untuk mengganti kata sandi anda?</string>
    <string name="current_password">Kata Sandi Saat Ini</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="confirm_password">Konfirmasi Kata Sandi</string>
    <string name="confirm_logout">Konfirmasi Keluar</string>
    <string name="confirm_edit_profile">Konfirmasi Edit Profil</string>
    <string name="profile_updated">Profil telah diperbarui</string>
    <string name="password_changed">Kata sandi telah di ubah</string>
    <string name="confirm_change_password">Konfirmasi ubah kata sandi</string>
    <string name="current_password_wrong">Kata sandi saat ini salah, coba lagi</string>
    <string name="new_password_and_confirm">Kata sandi baru dan konfirmasi kata sandi tidak sama </string>

    <string-array name="pref_language">
        <item>@string/indonesian</item>
        <item>@string/english</item>
    </string-array>

    <string name="indonesian">Indonesia</string>
    <string name="english">Inggris</string>
</resources>